[tool.poetry]
authors = ["Nicholas Schaub <nick.schaub@nih.gov>", "Camilo Velez <camilo.velez@axleinfo.com>"]
description = "Python API to configure and run Polus Plugins."
license = "License :: OSI Approved :: MIT License"
maintainers = ["Camilo Velez <camilo.velez@axleinfo.com>"]
name = "polus-plugins"
packages = [{include = "polus", from = "src"}]
readme = "README.md"
repository = "https://github.com/PolusAI/polus-plugins"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
fsspec = "^2023.1.0"
pydantic = "^1.10.4"
pygithub = "^1.57"
python = ">=3.9, <3.12"
python-on-whales = "^0.57.0"
tqdm = "^4.64.1"
xmltodict = "^0.13.0"
cwltool = "^3.1.20230513155734"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
ruff = "^0.0.261"
mypy = "^1.2.0"
datamodel-code-generator = "^0.17.1"
nox = "^2022.11.21"
poetry = "^1.3.2"
pydantic-to-typescript = "^1.0.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
