[tool.poetry]
authors = ["Nicholas Schaub <nick.schaub@nih.gov>", "Camilo Velez <camilo.velez@axleinfo.com>"]
description = "Python API to configure and run Polus Plugins."
license = "License :: OSI Approved :: MIT License"
maintainers = ["Camilo Velez <camilo.velez@axleinfo.com>"]
name = "polus-plugins"
packages = [{include = "polus", from = "src"}]
readme = "README.md"
repository = "https://github.com/PolusAI/polus-plugins"
version = "0.1.1"

[tool.poetry.dependencies]
click = "^8.1.3"
fsspec = "^2023.6.0"
pydantic = ">=1.10.9, <2.0"
pygithub = "^1.58.2"
python = ">=3.9, <3.12"
python-on-whales = "^0.57.0"
tqdm = "^4.65.0"
xmltodict = "^0.13.0"
cwltool = "^3.1.20230513155734"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.3.3"
black = "^23.3.0"
ruff = "^0.0.274"
mypy = "^1.4.0"
pytest = "^7.3.2"
pytest-xdist = "^3.3.1"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
datamodel-code-generator = "^0.17.1"
nox = "^2022.11.21"
pydantic-to-typescript = "^1.0.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
