[tool.poetry]
name = "polus-plugins-clustering-k-means"
version = "0.3.3-dev1"
description = ""
authors = [
"Jayapriya Nagarajan <jayapriya.nagarajan@nih.gov>",
"Kelechi Nina Mezu <nina.mezu@nih.gov>",
"hamshkhawar <hamdahshafqat.abbasi@nih.gov>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
filepattern = "^2.0.0"
typer = "^0.7.0"
nyxus = "^0.5.0"
vaex = "^4.7.0"
scikit_learn="^1.0.2"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
ipykernel = "^6.21.2"
requests = "^2.28.2"
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
