[tool.poetry]
name = "polus-plugins-features-feature-segmentation-eval"
version = "0.2.4-dev0"
description = "Feature segmentation eval"
authors = [
           "Vishakha Goyal <vishakha.goyal@nih.gov>",
           "Hamdah Shafqat Abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
filepattern = "^2.0.1"
opencv_python = "^4.5.1.48"
scikit-learn="^0.24.2"
pandas = "^1.2.4"
scipy = "^1.6.2"
typer = "^0.7.0"
blake3 = "^0.3.3"
llvmlite = "^0.39.1"
fastapi = "^0.92.0"
vaex = "^4.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
