[tool.poetry]
name = "polus-images-features-nyxus-tool"
version = "0.1.8-dev2"
description = ""
authors = [
           "Nick Schaub <nick.schaub@nih.gov>",
           "Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bfio =  "2.5.0"
filepattern = "2.1.4"
typer = "0.24.1"
tqdm = "4.67.3"
nyxus = "0.11.0"
vaex = "4.19.0"
pytest-sugar = "1.1.1"
numpy = ">2.0.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
ipykernel = "^6.21.2"
requests = "2.32.5"
scikit-image = "0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
