[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "polus-images-features-nyxus-tool"
version = "0.1.8-dev2"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.13"

authors = [
  { name = "Nick Schaub", email = "nick.schaub@nih.gov" },
  { name = "Hamdah Shafqat Abbasi", email = "hamdahshafqat.abbasi@nih.gov" }
]

dependencies = [
  "bfio==2.5.0",
  "filepattern==2.1.4",
  "typer==0.24.1",
  "tqdm==4.67.3",
  "nyxus==0.11.0",
  "numpy>2.0.0"
]


[project.optional-dependencies]
dev = [
  "bump2version>=1.0.1",
  "pre-commit>=3.0.4",
  "black>=23.1.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "pytest>=7.2.1",
  "pytest-sugar==1.1.1",
  "ipykernel>=6.21.2",
  "requests==2.32.5",
  "scikit-image==0.24.0",
  "pyarrow==23.0.1"
]


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[tool.pytest.ini_options]
pythonpath = [
  "."
]
