[tool.poetry]
name = "polus-plugins-features-pixel-segmentation-eval"
version = "0.1.11-dev"
description = ""
authors = [
           "Vishakha Goyal <vishakha.goyal@nih.gov>",
           "Hamdah Shafqat Abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
bfio = {version = "2.1.9", extras = ["all"]}
filepattern = "^2.0.1"
typer = "^0.7.0"
tqdm = "^4.64.1"
tifffile="^2020.10.1"
vaex = "^4.7.0"
scipy = "1.9.3"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
ipykernel = "^6.21.2"
requests = "^2.28.2"
scikit-image = "0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
