[tool.poetry]
name = "polus-plugins-features-region-segmentation-eval"
version = "0.2.4-dev0"
description = ""
authors = [
           "Vishakha Goyal <vishakha.goyal@nih.gov>",
           "Hamdah Shafqat Abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
bfio = {version = "2.1.9", extras = ["all"]}
filepattern = "^2.0.1"
typer = "^0.7.0"
tqdm = "^4.64.1"
scikit-image = "^0.19.3"
scikit-learn="^0.24.2"
opencv_python="^4.5.1.48"
tifffile="^2020.10.1"
blake3 = "^0.3.3"
llvmlite = "^0.39.1"
fastapi = "^0.92.0"
vaex = "^4.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
ipykernel = "^6.21.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
