[tool.poetry]
name = "polus-images-formats-file-renaming"
version = "0.2.5-dev0"
description = "Convert BioFormats datatypes to ome.tif or ome.zarr file format"
authors = [
    "Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>",
    "Melanie Parham <melanie.parham@axleinfo.com>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = "^0.7.0"
tqdm = "^4.64.1"
numpy = "^1.26.3"
filepattern = "^2.0.5"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
