[tool.poetry]
name = "polus-images-formats-image-dimension-stacking"
version = "0.2.0-dev0"
description = "Stacking multi-dimensional images"
authors = [
           "Nick Schaub <nick.schaub@nih.gov>",
           "Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
bfio = {version = "2.4.3", extras = ["all"]}
typer = "^0.7.0"
tqdm = "^4.66.1"
filepattern = "^2.0.4"
numpy = ">=2.0,<2.1"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.2.1"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"
scikit-image = "^0.24.0"
scipy = "<1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
