[tool.poetry]
name = "polus-images-formats-ome-converter"
version = "0.3.4"
description = "Convert BioFormats datatypes to ome.tif or ome.zarr file format"
authors = [
    "Nick Schaub <nick.schaub@nih.gov>",
    "Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>",
    "Najib Ishaq <najib.ishaq@nih.gov>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bfio =  "2.5.0"
filepattern = "2.1.4"
typer = "0.24.1"
tqdm = "^4.64.1"
numpy = ">2.0.0"
scikit-image = "^0.26.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
ipykernel = "^6.21.2"
requests = "^2.28.2"
scikit-image = ">=0.26.0"
matplotlib = "3.9.4"

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
