
[tool.poetry]
name = "polus-plugins-formats-tabular-to-arrow"
version = "0.2.1-dev0"
description = "This package converts Tabular to Arrow file format"
authors = ["Kelechi Nina Mezu <nina.mezu@nih.gov>","hamshkhawar <hamdahshafqat@hotmail.com>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
filepattern = "^2.0.4"
typer = "^0.7.0"
tqdm = "^4.64.1"
pyarrow = "^11.0.0"
blake3 = "^0.3.3"
fcsparser = "^0.2.4"
llvmlite = "^0.39.1"
fastapi = "^0.92.0"
vaex = "^4.7.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
