[tool.poetry]
name = "polus-plugins-regression-basic-flatfield-estimation"
version = "2.0.0"
description = ""
authors = [
    "Nick Schaub <nick.schaub@nih.gov>",
    "Najib Ishaq <najib.ishaq@nih.gov>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
bfio = { version = "2.1.9", extras = ["all"] }
filepattern = [
    { version = "^2.0.0", platform = "linux" },
    { version = "^2.0.0", platform = "win32" },
    { git = "https://github.com/PolusAI/filepattern", rev = "c07bf543c435cbc4cf264effd5a178868e9eaf19", platform = "darwin" },
]
typer = { version = "^0.7.0", extras = ["all"] }
BaSiCPy = "1.0.0"
numpy = "^1.24.3"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.2.0"
pytest-benchmark = "^4.0.0"
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
