[tool.poetry]
name = "polus-plugins-regression-basic-flatfield-estimation"
version = "2.1.1-dev0"
description = ""
authors = [
    "Nick Schaub <nick.schaub@nih.gov>",
    "Najib Ishaq <najib.ishaq@nih.gov>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
bfio = { version = "^2.3.3", extras = ["all"] }
filepattern = "^2.0.4"
typer = { version = "^0.7.0", extras = ["all"] }
numpy = "^1.24.3"
tqdm = "^4.65.0"
basicpy = "1.1.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
