[project]
name = "polus-images-regression-basic-flatfield-estimation"
version = "2.1.3-dev1"
description = ""
authors = [
    {name = "Nick Schaub", email = "nick.schaub@nih.gov"},
    {name = "Najib Ishaq", email = "najib.ishaq@nih.gov"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "bfio>=2.5.0",
    "filepattern>=2.2.4",
    "typer>=0.24.1,<0.25.0",
    "numpy>=2.0.0",
    "tqdm==4.67.3",
    "basicpy @ git+https://github.com/ndonyapour/BaSiCPy.git@chore/update-supported-python",
]

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.1",
    "pre-commit>=4.5.1",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.2.1",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1,<2.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/polus"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
