[tool.poetry]
name = "polus-plugins-regression-theia-bleedthrough-estimation"
version = "0.5.0-dev1"
description = ""
authors = [
    "Nick Schaub <nick.schaub@nih.gov>",
    "Najib Ishaq <najib.ishaq@nih.gov>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12,!=3.9.7"
bfio = { version = "^2.3.2", extras = ["all"] }
filepattern = "^2.0.4"
typer = { version = "^0.7.0", extras = ["all"] }
tqdm = "^4.65.0"
theia-py = "0.1.1"
scipy = "^1.9.0"
numpy = "^1.23.2"
tensorflow = "^2.13.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.2.0"
scikit-image = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# scipy restricts us to the most recently released version of Python, i.e. <3.12 as of 23rd August 2023.
# See [here](https://github.com/scipy/scipy/blob/ace5787b8e5d28cc5e3ad7594d287ea47a249b46/pyproject.toml#L1-L4)
# for more information.

# streamlit is not compatible with Python 3.9.7. See [here](https://github.com/streamlit/streamlit/blob/c0378a39b1ded984b7668a4a58fbe0fba04a2c20/lib/setup.py#L147-L150)
