[tool.poetry]
name = "polus-plugins-segmentation-cell-border-segmentation"
version = "0.2.2-dev0"
description = "This plugin segments cell border of fluorescently labeled epithelial cells"
authors = [
           "Nick Schaub <nick.schaub@nih.gov>",
           "Hamdah Shafqat Abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
bfio = {version = "2.3.2", extras = ["all"]}
tensorflow="^2.14.0"
typer = "^0.7.0"
filepattern = "^2.0.1"
scyjava = "^1.9.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
flake8 = "^6.0.0"
pre-commit = "^3.2.1"
flake8-docstrings = "^1.7.0"
black = "^23.3.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
